добавление открытия по кнопке «Оформить заказ» и сообщение «Заказ создан!»

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 </label>
                 <button type="submit" class="order-form__submit">Создать заказ</button>
             </form>
+            <p class="order-success" id="order-success" hidden>Заказ создан!</p>
             <button type="button" class="modal__close" aria-label="Закрыть">×</button>
         </div>
     </div>
