смена названий товаров (игрушек)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интернет-магазин</title>
+    <title>Интернет-магазин игрушек Fleur</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -11,51 +11,51 @@
 </head>
 <body>
     <header class="header">
-        <h1>Магазин</h1>
+        <h1>Fleur — магазин игрушек</h1>
     </header>
     <main class="main">
         <section class="catalog" aria-label="Каталог товаров">
             <h2 class="visually-hidden">Каталог товаров</h2>
             <ul class="product-list">
                 <li>
-                    <article class="product-card" data-id="1" data-price="1299">
-                        <h3 class="product-card__title">Смартфон X1</h3>
-                        <p class="product-card__price">1 299 ₽</p>
+                    <article class="product-card" data-id="1" data-price="1590">
+                        <h3 class="product-card__title">Плюшевый мишка «Лаванда»</h3>
+                        <p class="product-card__price">1 590 ₽</p>
                         <button type="button" class="product-card__add-btn">Добавить в корзину</button>
                     </article>
                 </li>
                 <li>
-                    <article class="product-card" data-id="2" data-price="2499">
-                        <h3 class="product-card__title">Ноутбук Pro</h3>
-                        <p class="product-card__price">2 499 ₽</p>
+                    <article class="product-card" data-id="2" data-price="2390">
+                        <h3 class="product-card__title">Кукла «Fleur» в платье</h3>
+                        <p class="product-card__price">2 390 ₽</p>
                         <button type="button" class="product-card__add-btn">Добавить в корзину</button>
                     </article>
                 </li>
                 <li>
-                    <article class="product-card" data-id="3" data-price="599">
-                        <h3 class="product-card__title">Наушники Sound</h3>
-                        <p class="product-card__price">599 ₽</p>
+                    <article class="product-card" data-id="3" data-price="690">
+                        <h3 class="product-card__title">Набор кубиков «Пастель»</h3>
+                        <p class="product-card__price">690 ₽</p>
                         <button type="button" class="product-card__add-btn">Добавить в корзину</button>
                     </article>
                 </li>
                 <li>
-                    <article class="product-card" data-id="4" data-price="1899">
-                        <h3 class="product-card__title">Планшет Tab 10</h3>
-                        <p class="product-card__price">1 899 ₽</p>
+                    <article class="product-card" data-id="4" data-price="1890">
+                        <h3 class="product-card__title">Деревянный поезд «Сказочный лес»</h3>
+                        <p class="product-card__price">1 890 ₽</p>
                         <button type="button" class="product-card__add-btn">Добавить в корзину</button>
                     </article>
                 </li>
                 <li>
-                    <article class="product-card" data-id="5" data-price="349">
-                        <h3 class="product-card__title">Клавиатура Mech</h3>
-                        <p class="product-card__price">349 ₽</p>
+                    <article class="product-card" data-id="5" data-price="1290">
+                        <h3 class="product-card__title">Музыкальная шкатулка «Единорог»</h3>
+                        <p class="product-card__price">1 290 ₽</p>
                         <button type="button" class="product-card__add-btn">Добавить в корзину</button>
                     </article>
                 </li>
                 <li>
-                    <article class="product-card" data-id="6" data-price="799">
-                        <h3 class="product-card__title">Мышь Wireless</h3>
-                        <p class="product-card__price">799 ₽</p>
+                    <article class="product-card" data-id="6" data-price="890">
+                        <h3 class="product-card__title">Набор для творчества «Акварель»</h3>
+                        <p class="product-card__price">890 ₽</p>
                         <button type="button" class="product-card__add-btn">Добавить в корзину</button>
                     </article>
                 </li>
@@ -96,7 +96,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>2026 Интернет-магазин</p>
+        <p>Магазин игрушек «Fleur»</p>
     </footer>
     <script src="js/app.js"></script>
 </body>
